Bug 301169 - The bottom-right progress bar doesn't display progress
Summary: The bottom-right progress bar doesn't display progress
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.8.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-04 18:50 UTC by Szokovacs Robert
Modified: 2012-06-13 18:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szokovacs Robert 2012-06-04 18:50:44 UTC
Kmail displays a progress bar on the bottom-right corner of the main window when it's doing something. For example at startup, it syncs all the folders (even when I ask it not to, but that's a different bug) and when an imap account has lots of folders, it takes time. Some releases previously, this progress bar reflected the progress of this syncing, now it only has two states, 0% and 100%.

Reproducible: Always

Steps to Reproduce:
1. Do something that displays the progress bar
2. Observe the lack of progress

Actual Results:  
The bar stays at 0 until finished.

Expected Results:  
The progress bar should display the progress of the operation
Comment 1 Laurent Montel 2012-06-13 17:17:45 UTC
I confirm it .
Will look at soon
Comment 2 Laurent Montel 2012-06-13 18:41:51 UTC
Git commit 711aaf568e68da2534156f9c2036ced9374b4067 by Montel Laurent.
Committed on 13/06/2012 at 20:41.
Pushed by mlaurent into branch 'master'.

Fix Bug 301169 - The bottom-right progress bar doesn't display progress

FIXED-IN: 4.9

M  +7    -0    resources/imap/resourcestate.cpp
M  +2    -0    resources/imap/resourcestate.h
M  +1    -0    resources/imap/resourcestateinterface.h
M  +6    -0    resources/imap/resourcetask.cpp
M  +2    -1    resources/imap/resourcetask.h
M  +1    -0    resources/imap/retrieveitemstask.cpp

http://commits.kde.org/kdepim-runtime/711aaf568e68da2534156f9c2036ced9374b4067