Fix Bug 301169 - The bottom-right progress bar doesn't display progress

FIXED-IN: 4.9
BUG: 301169